feat: add clean up function to backend server
